# docs/swagger.yaml
@@ -65,6 +65,25 @@ definitions:
       role:
         type: string
     type: object
+  web.UserUpdateMeRequest:
+    properties:
+      email:
+        maxLength: 100
+        minLength: 1
+        type: string
+      name:
+        maxLength: 100
+        minLength: 1
+        type: string
+      password:
+        maxLength: 100
+        minLength: 8
+        type: string
+    required:
+    - email
+    - name
+    - password
+    type: object
   web.UserUpdateRequest:
     properties:
       email:
@@ -220,6 +239,29 @@ paths:
       security:
       - BearerAuth: []
       summary: Get current user profile
+      tags:
+      - Users
+    put:
+      consumes:
+      - application/json
+      description: Update authenticated user profile
+      parameters:
+      - description: User update request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/web.UserUpdateMeRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/web.UserResponse'
+      security:
+      - BearerAuth: []
+      summary: Update current user profile
       tags:
       - Users
   /login:
